--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -24,6 +24,8 @@
 
   flex-direction: column;
 
+  justify-content: center;
+
   gap: var(--space-8);
 
 }
@@ -120,7 +122,7 @@
 
   position: relative;
 
-  width: 900px;
+  width: 800px;
 
   height: 654px;
 
