--- a/src/app/home-blog/home-blog.component.css
+++ b/src/app/home-blog/home-blog.component.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 1600px;
   margin: 0 auto;
 }
 
@@ -29,8 +28,8 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  height: 200px;
-  width: 661.969px;
+  height: 150px;
+  width: 1000px;
 }
 
 .blog-section__subtitle {
@@ -46,9 +45,9 @@
 
 .blog-section__title {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 20px;
-  height: 75.188px;
+  height: 60px;
 }
 
 .blog-section__title-text {
@@ -71,10 +70,10 @@
   font-family: var(--font-sans);
   font-weight: var(--font-normal);
   font-size: 20px;
-  line-height: 25.6px;
+  line-height: 0;
   color: #6b6b6b;
-  margin-top: 16px;
-  max-width: 50%;
+  margin: 0;
+  max-width: 100%;
 }
 
 .blog-section__explore-link {
@@ -98,7 +97,7 @@
 .blog-section__grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 100px;
+  gap: 50px;
 }
 
 .blog-card {
