--- a/src/app/home-real-stories/home-real-stories.component.css
+++ b/src/app/home-real-stories/home-real-stories.component.css
@@ -46,7 +46,7 @@
   position: relative;
   width: 1600px;
   margin: 0 auto;
-  padding: 100px 160px;
+  padding: 100px 0px;
   display: flex;
   flex-direction: column;
   gap: 64px;
